package com.example.psoft25_1221392_1211686_1220806_1211104.physicianmanagement.core;

import com.example.psoft25_1221392_1211686_1220806_1211104.physicianmanagement.core.Command;

public interface CommandDispatcher {
    void dispatch(Command command);
}
